@@ -1,3 +1,7 @@
+21 October 2008: Wouter
+	- fix update-anchors.sh, so it does not report different RR order
+	  as an update.  Sorts the keys in the file.  Updated copyright.
+
 20 October 2008: Wouter
 	- quench a log message that is debug only.
 	- iana portlist updated.
